new Double[] Fehler behoben