@@ -38,10 +38,10 @@ class VectorAdditionAndSubtraction<T extends Number> extends VectorOperation<T> 
     }
 
     private T addVectorsAtIndex(int index) {
-        return (T) new Double(vectorA[index].doubleValue() + vectorB[index].doubleValue());
+        return (T) Double.valueOf(vectorA[index].doubleValue() + vectorB[index].doubleValue());
     }
 
     private T subtractVectorsAtIndex(int index) {
-        return (T) new Double(vectorA[index].doubleValue() - vectorB[index].doubleValue());
+        return (T) Double.valueOf(vectorA[index].doubleValue() - vectorB[index].doubleValue());
     }
 }
